pyndndir = $(PYTHON_SITE_PKG)/pyndn
pyndnimpldir = $(pyndndir)/impl
#pyndnstagingdir = $(pyndndir)/staging

pyndn_PYTHON = \
	pyndn/__init__.py \
	pyndn/NDN.py \
	pyndn/Closure.py \
	pyndn/ContentObject.py \
	pyndn/Interest.py \
	pyndn/Key.py \
	pyndn/Name.py \
	pyndn/Repository.py \
	pyndn/utils.py

pyndnimpl_PYTHON = \
	pyndn/impl/__init__.py \
	pyndn/impl/ndnb.py \
	pyndn/impl/enumeration.py \
	pyndn/impl/segmenting.py

#pyndnstaging_PYTHON = \
#	pyndn/staging/__init__.py \
#	pyndn/staging/RepoControl.py
	pyndn/NDN.py

pyndn_PYTHON += pyndn/NameCrypto.py
